load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "@cgrindel_rules_updatesrc//updatesrc:updatesrc.bzl",
    "updatesrc_update_all",
)
load(
    "@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl",
    "bzlformat_missing_pkgs",
    "bzlformat_pkg",
)

bzlformat_pkg(
    name = "bzlformat",
)

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

exports_files([".swiftformat"])

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        ":bzlformat_missing_pkgs_fix",
    ],
)
