load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "@cgrindel_bazel_starlib//bzlformat:defs.bzl",
    "bzlformat_missing_pkgs",
    "bzlformat_pkg",
)
load(
    "@cgrindel_bazel_starlib//updatesrc:defs.bzl",
    "updatesrc_update_all",
)

bzlformat_pkg(
    name = "bzlformat",
)

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

exports_files([".swiftformat"])

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        ":bzlformat_missing_pkgs_fix",
    ],
)
