load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "DateUtils",
    srcs = [
        "BinaryIntegerDateArithmetic.swift",
        "BinaryIntegerTimeIntervalHelpers.swift",
        "DateISO.swift",
        "FloatingPoint+TimeIntervalHelpers.swift",
    ],
    module_name = "DateUtils",
    visibility = ["//visibility:public"],
)
