load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("//build/swift:swift_library.bzl", "swift_library")

swift_library(
    name = "MathUtils",
    module_name = "MathUtils",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/StructUtils",
    ],
)

bzlformat_pkg(name = "bzlformat")
