load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//build/swift:swift_library.bzl", "swift_library")

swift_library(
    name = "MathUtils",
    module_name = "MathUtils",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/StructUtils",
    ],
)

bzlformat_pkg(name = "bzlformat")
