load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "MathUtils",
    srcs = [
        "DecimalSequenceHelpers.swift",
        "LinearModel.swift",
        "OrderedPair.swift",
        "OrderedPairProtocol.swift",
    ],
    module_name = "MathUtils",
    visibility = ["//visibility:public"],
    deps = ["//Sources/StructUtils"],
)
