load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "NumberUtils",
    srcs = [
        "DecimalCSVFormat.swift",
        "DecimalRandom.swift",
        "DecimalRounding.swift",
        "DecimalToDouble.swift",
        "DecimalToInt.swift",
        "DoubleToDecimal.swift",
        "LengthConversions.swift",
        "UnitsOfMeasurement.swift",
    ],
    module_name = "NumberUtils",
    visibility = ["//visibility:public"],
)
