load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "OptionalUtils",
    srcs = [
        "IsNotNil.swift",
        "OptionalError.swift",
        "OptionalProtocol.swift",
    ],
    module_name = "OptionalUtils",
    visibility = ["//visibility:public"],
)
