load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "StringUtils",
    srcs = [
        "Data.swift",
        "StaticString.swift",
        "String+SubstringExt.swift",
        "StringRandom.swift",
    ],
    module_name = "StringUtils",
    visibility = ["//visibility:public"],
)
