load("//build/swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Truth",
    testonly = 1,
    srcs = glob(["**/*.swift"]),
    module_name = "Truth",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/OptionalUtils",
        "//Sources/StringUtils",
    ],
)
