load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//build/swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Truth",
    testonly = 1,
    module_name = "Truth",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/OptionalUtils",
        "//Sources/StringUtils",
    ],
)

bzlformat_pkg(name = "bzlformat")
