load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_library(
    name = "TypeUtils",
    srcs = [
        "Sequence+Extensions.swift",
        "Typeable.swift",
    ],
    module_name = "TypeUtils",
    visibility = ["//visibility:public"],
)
