load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "DateUtilsTests",
    srcs = [
        "BinaryIntegerDateArithmeticTests.swift",
        "BinaryIntegerTimeIntervalHelpersTests.swift",
        "DateISOTests.swift",
        "FloatingPoint+TimeIntervalHelpersTests.swift",
    ],
    module_name = "DateUtilsTests",
    deps = [
        "//Sources/DateUtils",
        "//Sources/Truth",
    ],
)
