load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//build/swift:swift_test.bzl", "swift_test")

swift_test(
    name = "MathUtilsTests",
    deps = [
        "//Sources/MathUtils",
        "@cgrindel_swift_toolbox//Sources/Truth",
    ],
)

bzlformat_pkg(name = "bzlformat")
