load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "MathUtilsTests",
    srcs = [
        "DecimalSequenceHelpersTests.swift",
        "LinearModelTests.swift",
        "OrderedPairProtocolTests.swift",
        "OrderedPairTests.swift",
    ],
    module_name = "MathUtilsTests",
    deps = [
        "//Sources/MathUtils",
        "//Sources/Truth",
    ],
)
