load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "NumberUtilsTests",
    srcs = [
        "DecimalCSVFormatTests.swift",
        "DecimalRandomTests.swift",
        "DecimalRoundingTests.swift",
        "DecimalToDoubleTests.swift",
        "DecimalToIntTests.swift",
        "DoubleToDecimalTests.swift",
        "LengthConversionsTests.swift",
        "main.swift",
    ],
    module_name = "NumberUtilsTests",
    deps = [
        "//Sources/NumberUtils",
        "//Sources/Truth",
    ],
)
