load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "StringUtilsTests",
    srcs = [
        "DataTests.swift",
        "StaticStringTests.swift",
        "String+SubstringExtTests.swift",
        "StringRandomTests.swift",
        "main.swift",
    ],
    module_name = "StringUtilsTests",
    deps = [
        "//Sources/StringUtils",
        "//Sources/Truth",
    ],
)
