load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("//build/swift:swift_test.bzl", "swift_test")

swift_test(
    name = "StructUtilsTests",
    deps = [
        "//Sources/StructUtils",
        "@cgrindel_swift_toolbox//Sources/Truth",
    ],
)

bzlformat_pkg(name = "bzlformat")
