load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "StructUtilsTests",
    srcs = [
        "CopyWithableTests.swift",
        "WithableTests.swift",
    ],
    module_name = "StructUtilsTests",
    deps = [
        "//Sources/StructUtils",
        "//Sources/Truth",
    ],
)
