load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

swift_test(
    name = "TypeUtilsTests",
    srcs = [
        "Sequence+ExtensionsTests.swift",
        "TestProtocol.swift",
        "TypeableTests.swift",
        "main.swift",
    ],
    module_name = "TypeUtilsTests",
    deps = [
        "//Sources/Truth",
        "//Sources/TypeUtils",
    ],
)
